...
            android:icon="@drawable/ic_store"
            android:id="@+id/nav_Tenants"
            android:title="Tenants" />

        <item
            android:icon="@drawable/ic_report"
            android:id="@+id/nav_Reports"
            android:title="Reports" />

        <item
            android:icon="@drawable/ic_statistics"
            android:id="@+id/nav_Auditor_Statistics"
            android:title="View Statistics" />
    </group>

<item android:title="Manage">
    <menu>
        <item
            android:icon="@drawable/ic_add"
            android:id="@+id/nav_Add_Tenant"
            android:title="Add Tenant"/>
        <item
            android:icon="@drawable/ic_report"
            android:id="@+id/nav_Test"
            android:title="Test Example"/>
    </menu>
...
