<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/statusConfirmationFragment"
    android:gravity="center">

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/confirmation_tick"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_return"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#ffb684"
        android:text="button"/>

</LinearLayout>