<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_expanded_case"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
...
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/resolveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="80dp"
            android:paddingHorizontal="5dp"
            android:text="Resolve"
            android:textStyle="bold"
...
